--- a/force-app/main/default/lwc/accAcctivities/accAcctivities.html
+++ b/force-app/main/default/lwc/accAcctivities/accAcctivities.html
@@ -1,7 +1,28 @@
 <template>
-    <lightning-card>
-        <lightning-output-field field-name="Subject" onclick={handleClick}></lightning-output-field>
-        <lightning-output-field field-name="EndDate" ></lightning-output-field>
-        <lightning-output-field field-name="StartDateTime"></lightning-output-field>
-    </lightning-card>
+  <template if:false={showEvent}>
+    <br/> 
+        <div class="slds-text-align_center slds-text-heading_medium slds-text-font_monospace" >
+            <lightning-card>
+                <h1 style="font-size: 10px; color:red">No Events to display</h1>
+            </lightning-card>
+        </div>
+    <br/> 
+</template>
+<template if:true={showEvent}>
+<template for:each={eventDetails} for:item="event">
+<div key={event.Id} class = "slds-p-left_x-small slds-p-right_x-small">
+<lightning-card>
+    <div class="slds-m-around_small">
+        <lightning-formatted-date-time value={event.StartDateTime} hour="2-digit" minute="2-digit" ></lightning-formatted-date-time>            
+        &nbsp; &nbsp; <lightning-button label={event.Subject} variant="base"
+        onclick={navigateToViewEventPage} value={event.Id}>
+    </lightning-button><br/>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  <lightning-formatted-date-time value={event.EndDateTime} year="numeric" month="numeric" day="numeric" hour="2-digit"
+                                minute="2-digit" style="text-align: center;"></lightning-formatted-date-time>
+
+        </div>
+</lightning-card>
+</div>
+</template>
+</template>
 </template>
